<resources>
    <string name="app_name">ListaDeContatos</string>
    <string name="login_title">LOGIN</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="confirmSenha">Comfirmar Senha</string>
    <string name="login">Login</string>
    <string name="icon_login">Icone</string>
    <string name="registrar">Registrar</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="novoContato">Novo Contato</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="voltar">Voltar</string>
    <string name="exluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="editarContato">Editar Contato</string>
</resources>